[tool.poetry]
name = "MediGuide"
version = "0.1.0"
description = ""
authors = ["nick <nickchen1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.43.2"
pymongo = "^4.11.3"
langchain = "^0.3.21"
langchain-openai = "^0.3.10"
langchain-mongodb = "^0.6.0"
audio-recorder-streamlit = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
